--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -42,7 +42,7 @@
 \newcommand{\inpLi}[1]{\text{+}\spLiOut{#1}}
 \newcommand{\outLi}[1]{\text{-}\spLiOut{#1}}
 
-\newcommand{\mycolor}[2]{\ifthenelse{\equal{#1}{6}}{{\color{Orange}#2}}{{\color{Cerulean}#2}}}
+\newcommand{\mycolor}[2]{\ifthenelse{\equal{#1}{6}}{{\color{Red}#2}}{{\color{OliveGreen}#2}}}
 
 
 
@@ -146,7 +146,7 @@ so that we have the three equations:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	\Li{u} & = & \epsilon_u \LiAllOut\\
+	\LiOut{u} & = & \epsilon_u \LiAllOut\\
 	\\
 	\beta_u & = & \dfrac{\Li{u}}{\LiOut{u}}\\
 	\\
@@ -225,36 +225,62 @@ with no restriction on microscopic values.
 \end{array}
 \right.
 \end{equation}
-with
+or, by defining
+\begin{equation}
+	\alpha_{xy} = \dfrac{E_{xy}}{\mathsf{E}}
+\end{equation}
+
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-A_{06}   & = & a_{06} E_{00} \LiOut{6}\\
-A_{07}   & = & a_{07} E_{00} \LiOut{7}\\
-D_{06}   & = & d_{06} E_{06}\\
-D_{07}   & = & d_{07} E_{07}\\
-A_{66}   & = & a_{66} E_{06} \LiOut{6} \\
-D_{66}   & = & d_{66} E_{66}\\
-A_{77}   & = & a_{77} E_{07} \LiOut{7} \\
-D_{77}   & = & d_{77} E_{77}\\
-A_{67}   & = & a_{67} E_{06} \LiOut{7}\\
-D_{67}   & = & d_{67} E_{67}\\
-A_{76}   & = & a_{76} E_{07} \LiOut{6}\\
-D_{76}   & = & d_{76} E_{67}\\
-v_{6H}   & = & k^h_6 E_{6H}\\
-v_{7H}   & = & k^h_7 E_{7H}\\
-v^p_{66} & = & k^p_{66} E_{66} \proton \\
-v^p_{77} & = & k^p_{77} E_{77} \proton \\
-v^p_{67} & = & k^p_{67} E_{67} \proton \\
-v^p_{76} & = & k^p_{76} E_{67} \proton \\
+\partial_t \alpha_{00} & = & D'_{06}-A'_{06} + D'_{07}-A'_{07}\\
+\partial_t \alpha_{06} & = & -D'_{06}+A_{06} - A_{66} + D_{66} - A_{67} + D_{67} + v'_{6H}\\
+\partial_t \alpha_{07} & = & -D'_{07}+A'_{07} - A'_{77} + D'_{77} - A'_{76} + D'_{76} + v'_{7H}\\
+\partial_t \alpha_{66} & = & A'_{66}-D_{66} -v'^p_{66}\\
+\partial_t \alpha_{67} & = & A'_{67}-D_{67} + A'_{76}-D'_{76} - (v'^p_{67}+v'^p_{76})\\
+\partial_t \alpha_{77} & = & A'_{77}-D_{77} - v'^p_{77}\\
+\partial_t \alpha_{6H} & = & v'^p_{66}+v'^p_{67} - v'_{6H}\\
+\partial_t \alpha_{7H} & = & v'^p_{77}+v'^p_{76} - v'_{7H}\\
+1      & = & {\displaystyle \sum_{x\leq y} \alpha_{xy}}+\alpha_{6H}+\alpha_{7H}\\
+\end{array}
+\right.
+\end{equation}
+
+with
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl|rcl}
+A_{06}   & = & a_{06} E_{00} \LiOut{6}  & A'_{06}   & = & a_{06}    \alpha_{00} \LiOut{6}\\
+A_{07}   & = & a_{07} E_{00} \LiOut{7}  & A'_{07}   & = & a_{07}    \alpha_{00} \LiOut{7}\\
+D_{06}   & = & d_{06} E_{06}            & D'_{06}   & = & d_{06}    \alpha_{06}\\
+D_{07}   & = & d_{07} E_{07}            & D'_{07}   & = & d_{07}    \alpha_{07}\\
+A_{66}   & = & a_{66} E_{06} \LiOut{6}  & A'_{66}   & = & a_{66}    \alpha_{06} \LiOut{6} \\
+D_{66}   & = & d_{66} E_{66}            & D'_{66}   & = & d_{66}    \alpha_{66}\\
+A_{77}   & = & a_{77} E_{07} \LiOut{7}  & A'_{77}   & = & a_{77}    \alpha_{07} \LiOut{7}\\
+D_{77}   & = & d_{77} E_{77}            & D'_{77}   & = & d_{77}    \alpha_{77}\\
+A_{67}   & = & a_{67} E_{06} \LiOut{7}  & A'_{67}   & = & a_{67}    \alpha_{06} \LiOut{7}\\
+D_{67}   & = & d_{67} E_{67}            & D'_{67}   & = & d_{67}    \alpha_{67}\\
+A_{76}   & = & a_{76} E_{07} \LiOut{6}  & A'_{76}   & = & a_{76}    \alpha_{07} \LiOut{6}\\
+D_{76}   & = & d_{76} E_{67}            & D'_{76}   & = & d_{76}    \alpha_{67}\\
+v_{6H}   & = & k^h_6 E_{6H}             & v'_{6H}   & = & k^h_6    \alpha_{6H} \\
+v_{7H}   & = & k^h_7 E_{7H}             & v'_{7H}   & = & k^h_7    \alpha_{7H} \\
+v^p_{66} & = & k^p_{66} E_{66} \proton  & v'^p_{66} & = & k^p_{66} \alpha_{66} \proton\\
+v^p_{77} & = & k^p_{77} E_{77} \proton  & v'^p_{77} & = & k^p_{77} \alpha_{77} \proton\\
+v^p_{67} & = & k^p_{67} E_{67} \proton  & v'^p_{67} & = & k^p_{67} \alpha_{67}\\
+v^p_{76} & = & k^p_{76} E_{67} \proton  & v'^p_{76} & = & k^p_{76} \alpha_{67} \proton\\
 \end{array}
 \right.
 \end{equation}
 
 And
 \begin{equation}
-	\partial_t \Li{6} = v^p_{66}+v^p_{76} + \partial_t \myleak{\Li{6}},\;\;
-	\partial_t \Li{7} = v^p_{77}+v^p_{67} + \partial_t \myleak{\Li{7}}
+\left\lbrace
+\begin{array}{rclcl}
+	\partial_t \Li{6} & = & v^p_{66}+v^p_{76} + \partial_t \myleak{\Li{6}} & = & \partial_t \myleak{\Li{6}} + \mathsf{E} \left( v'^p_{66}+v'^p_{76}\right) \\
+	\\
+	\partial_t \Li{7} & = & v^p_{77}+v^p_{67} + \partial_t \myleak{\Li{7}} & = & \partial_t \myleak{\Li{7}} + \mathsf{E} \left( v'^p_{66}+v'^p_{76}\right)\\
+\end{array}
+\right.
 \end{equation}
 
 \subsection{Steady State}
@@ -269,6 +295,11 @@ We define:
 	\vec{E}_1 = \begin{bmatrix}
 	E_{06}\\
 	E_{07}\\
+	\end{bmatrix}, \;\; 
+	\vec{\alpha}_{1} = 
+	\begin{bmatrix}
+	\alpha_{06}\\
+	\alpha_{07}\\
 	\end{bmatrix}
 \end{equation}
 \item and the second layer variables:
@@ -277,7 +308,12 @@ We define:
 	E_{66}\\
 	E_{67}\\
 	E_{77}\\
-	\end{bmatrix}
+	\end{bmatrix},\;\;
+	\vec{\alpha}_2 = \begin{bmatrix}
+	\alpha_{66}\\
+	\alpha_{67}\\
+	\alpha_{77}\\
+	\end{bmatrix},\;\;
 \end{equation}
 \item the outer concentrations:
 \begin{equation}
@@ -302,7 +338,12 @@ We define:
 	\begin{bmatrix}
 	E_{6H}\\
 	E_{7H}\\
-	\end{bmatrix}
+	\end{bmatrix},\;\;
+\vec{\alpha}_H = 
+	\begin{bmatrix}
+	\alpha_{6H}\\
+	\alpha_{7H}\\
+	\end{bmatrix} 
 \end{equation}
 
 \end{itemize}
