--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -234,11 +234,11 @@ or, by defining
 \left\lbrace
 \begin{array}{rcl}
 \partial_t \alpha_{00} & = & D'_{06}-A'_{06} + D'_{07}-A'_{07}\\
-\partial_t \alpha_{06} & = & -D'_{06}+A_{06} - A_{66} + D_{66} - A_{67} + D_{67} + v'_{6H}\\
+\partial_t \alpha_{06} & = & -D'_{06}+A'_{06} - A'_{66} + D'_{66} - A'_{67} + D'_{67} + v'_{6H}\\
 \partial_t \alpha_{07} & = & -D'_{07}+A'_{07} - A'_{77} + D'_{77} - A'_{76} + D'_{76} + v'_{7H}\\
-\partial_t \alpha_{66} & = & A'_{66}-D_{66} -v'^p_{66}\\
-\partial_t \alpha_{67} & = & A'_{67}-D_{67} + A'_{76}-D'_{76} - (v'^p_{67}+v'^p_{76})\\
-\partial_t \alpha_{77} & = & A'_{77}-D_{77} - v'^p_{77}\\
+\partial_t \alpha_{66} & = & A'_{66}-D'_{66} -v'^p_{66}\\
+\partial_t \alpha_{67} & = & A'_{67}-D'_{67} + A'_{76}-D'_{76} - (v'^p_{67}+v'^p_{76})\\
+\partial_t \alpha_{77} & = & A'_{77}-D'_{77} - v'^p_{77}\\
 \partial_t \alpha_{6H} & = & v'^p_{66}+v'^p_{67} - v'_{6H}\\
 \partial_t \alpha_{7H} & = & v'^p_{77}+v'^p_{76} - v'_{7H}\\
 1      & = & {\displaystyle \sum_{x\leq y} \alpha_{xy}}+\alpha_{6H}+\alpha_{7H}\\
