--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -352,7 +352,7 @@ Using the three equations describing the second layer and assuming that the inte
 
 \begin{equation}
 \boxed{
-E_{xy} = <{\vec{C}} \vert \mymat{F_{xy}} \vert \vec{E}_1 >
+E_{xy} = <{\vec{C}} \vert \mymat{F_{xy}} \vert \vec{E}_1 >,\;\alpha_{xy} = <{\vec{C}} \vert \mymat{F_{xy}} \vert \vec{\alpha}_1 >
 }
 \end{equation}
 with
@@ -392,6 +392,7 @@ and
 \left\lbrace
 \begin{array}{rcl}
 	\partial_t \Li{6} & = & <\vec{C}|\mymat{G}_6|\vec{E}_1> \proton+ k_6\left(\Theta \LiOut{6} - \Li{6}\right)\\
+	& = & \mathsf{E} <\vec{C}|\mymat{G}_6|\vec{\alpha}_1> \proton+ k_6\left(\Theta \LiOut{6} - \Li{6}\right)\\
 	\mymat{G}_6 &= & k^p_{66} \mymat{F}_{66} + k^p_{67}\mymat{F}_{67} 
 %	= 
 %	\begin{bmatrix}
@@ -401,6 +402,7 @@ and
 	\\
 	\\
 	\partial_t \Li{7} & = & <\vec{C}|\mymat{G}_7|\vec{E}_1> \proton + k_7\left(\Theta \LiOut{7} - \Li{7}\right)\\
+		& = & \mathsf{E} <\vec{C}|\mymat{G}_7|\vec{\alpha}_1> \proton+ k_7\left(\Theta \LiOut{7} - \Li{7}\right)\\
 	\mymat{G}_7 & = & k^p_{77} \mymat{F}_{77} + k^p_{76}\mymat{F}_{67} 
 %	= 
 %	\begin{bmatrix}
