--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -436,16 +436,16 @@ and
 \subsubsection{First layer as a function of the external components}
 We define:
 \begin{equation}
-\mymat{A}_0 =\begin{bmatrix}
+\mymat{\Delta}_A =\begin{bmatrix}
 a_{06} & 0 \\
 0 & a_{07} \\
 \end{bmatrix},\;\;
-\mymat{D}_0 = 
+\mymat{\Delta}_D = 
 \begin{bmatrix}
 d_{06} & 0 \\
 0 & d_{07} \\
 \end{bmatrix},\;\;
-\mymat{R}_H =
+\mymat{\Delta}_H =
 \begin{bmatrix}
 k^h_6 & 0 \\
 0 & k^h_7 \\
@@ -468,29 +468,21 @@ Leading to
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-W_1 & = & 1 +  <\vec{L}_1| \mymat{\Delta}_K \mymat{D}_0 | \vec{C}> \\
+W_1 & = & 1 +  <\vec{L}_1| \mymat{\Delta}_K \mymat{\Delta}_D | \vec{C}> \\
 \\
 \mymat{M_1} & = & \mymat{D}_0^{-1} + \mymat{\Delta}_C \mymat{\Delta}_K \mymat{Q}_1 \\
 \\
 W_1 \vec{E}_1 & = & \mymat{M}_1 \left( 
-	\mymat{R}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C}
+	\mymat{\Delta}_H \vec{E}_H + E_{00} \mymat{\Delta}_A \vec{C}
 	\right)\\
-%\mymat{D}_0^{-1}
-%\underbrace{
-%\left(
-%\mymat{I}_d+
-%\underbrace{
-%	\begin{bmatrix}
-%	K_6\LiOut{6} & K_6\LiOut{6}\\
-%	K_7\LiOut{7} & K_7 \LiOut{7}\\
-%	\end{bmatrix}
-%	}_{\mymat{M}_1}
-%		\right)}_{\mymat{M}_1'}
-%	\left( 
-%	\mymat{R}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C}
-%	\right)\\
 \end{array}
 \right.
+\end{equation}
+and since me made that the lithium intake is slow w.r.t the pre-equilbria, then me must assume that the
+recycling is slow as well (otherwise $\vec{E}_H=\vec{0}$.
+And we finally got
+\begin{equation}
+	W_1 \vec{E}_1  \simeq E_{00} \mymat{M}_1  \mymat{\Delta}_A \vec{C}
 \end{equation}
 
 \subsection{Using Mass Conservation}
@@ -504,13 +496,16 @@ We replace:
 + \underbrace{E_{6H} + E_{7H}}_{<\vec{L}_1|\vec{E}_H>}\\
 \\
 W_1 \mathsf{E} & = & W_1 E_{00} + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | W_1 \vec{E}_1 > + <W_1 \vec{L}_1|\vec{E}_H> \\
-& = & W_1 E_{00} + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | \mymat{M}_1 \left( 
-	\mymat{R}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C}\right) > + <W_1 \vec{L}_1|\vec{E}_H> \\
-	& = & E_{00} \left(W_1 + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C}| \mymat{M}_1 \mymat{A}_0 |\vec{C} >\right) +
-	\left( <W_1\vec{L}_1|\vec{E}_H> + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C}| \mymat{M}_1 \mymat{R}_H | \vec{E}_H> \right) \\
+& = & W_1 E_{00} + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | E_{00} \mymat{M}_1  \mymat{\Delta}_A \vec{C} > + <W_1 \vec{L}_1|\vec{E}_H> \\
+& = & E_{00} \left[ W_1 + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | \mymat{M}_1  \mymat{\Delta}_A \vec{C} > \right] + W_1 <\vec{L}_1 | \vec{E}_H>
 \end{array}
 \right.
 \end{equation}
+so that
+\begin{equation}
+	E_{00} = \dfrac{W_1}{W_1 + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | \mymat{M}_1  \mymat{\Delta}_A \vec{C} >} \left[\mathsf{E}-(E_{6H}+E_{7H})\right]
+\end{equation}
+
 \end{document}
 
 and
