--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -503,7 +503,11 @@ W_1 \mathsf{E} & = & W_1 E_{00} + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | W_1 \
 \end{equation}
 so that
 \begin{equation}
-	E_{00} = \dfrac{W_1}{W_1 + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | \mymat{M}_1  \mymat{\Delta}_A \vec{C} >} \left[\mathsf{E}-(E_{6H}+E_{7H})\right]
+\begin{array}{rcl}
+	E_{00}      &=&\dfrac{W_1}{W_1 + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | \mymat{M}_1  \mymat{\Delta}_A \vec{C} >} \left[\mathsf{E}-(E_{6H}+E_{7H})\right]\\
+	\\
+	\alpha_{00} &=& \dfrac{W_1}{W_1 + < \vec{L}_1 + \mytrn{\mymat{F}}\vec{C} | \mymat{M}_1  \mymat{\Delta}_A \vec{C} >} \left[1-(\alpha_{6H}+\alpha_{7H})\right]\\
+\end{array}
 \end{equation}
 
 \end{document}
