--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -520,8 +520,17 @@ We define
 \end{array}
 \end{equation}
 
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+\partial_t \Li{x} & = & E_{00}<\vec{C}|\mymat{G}_x|\mymat{M}_1\mymat{\Delta}_A|\vec{C}> \proton+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+\end{array}
+\right.
+\end{equation}
 
 \end{document}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 and
 \begin{equation}
