--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -524,9 +524,12 @@ We define
 \left\lbrace
 \begin{array}{rcl}
 \partial_t \Li{x} & = & E_{00}<\vec{C}|\mymat{G}_x|\mymat{M}_1\mymat{\Delta}_A|\vec{C}> \proton+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+ & = & E_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \Li{x}+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
 \end{array}
 \right.
 \end{equation}
+
+\centerline{ \textcolor{Red}{write equations} }
 
 \end{document}
 
