--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -513,23 +513,35 @@ We define
 \end{equation}
 
 \begin{equation}
+\left\lbrace
 \begin{array}{rcl}
 	E_{00}      &=&\dfrac{W_1}{W_1 + W_3} \left[\mathsf{E}-(E_{6H}+E_{7H})\right]\\
 	\\
 	\alpha_{00} &=& \dfrac{W_1}{W_1 +W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right]\\
 \end{array}
+\right.
 \end{equation}
 
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
 \partial_t \Li{x} & = & E_{00}<\vec{C}|\mymat{G}_x|\mymat{M}_1\mymat{\Delta}_A|\vec{C}> \proton+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
- & = & E_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \Li{x}+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+ & = & E_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x}+ k_x\left(\Theta \LiOut{x} - \Li{x}\right)\\
+ \\
+ \partial_t E_{xH} & = & <\vec{C}|\mymat{G}_6|\vec{E}_1> \proton - k_x^h E_{xH}\\
+ & = & E_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x} - k_x^h E_{xH} \\
 \end{array}
 \right.
 \end{equation}
 
-\centerline{ \textcolor{Red}{write equations} }
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\partial_t \beta_x & = & \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}> \right)  E_{00} + k_x \left(\Theta - \beta_x\right)\\
+	\partial_t \alpha_{xH} & = & \alpha_{00} \proton \left( <\vec{L}_x|\vec{C}> + <\vec{C}|\mymat{Q}_x|\vec{C}>\right) \LiOut{x} - k_x^h \alpha_{xH}\\
+\end{array}
+\right.
+\end{equation}
 
 \end{document}
 
