--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -479,13 +479,14 @@ W_1 \vec{E}_1 & = & \mymat{M}_1 \left(
 \right.
 \end{equation}
 and since me made that the lithium intake is slow w.r.t the pre-equilbria, then me must assume that the
-recycling is slow as well (otherwise $\vec{E}_H=\vec{0}$.
+recycling is slow as well (otherwise $\vec{E}_H=\vec{0}$).
 And we finally got
 \begin{equation}
 	W_1 \vec{E}_1  \simeq E_{00} \mymat{M}_1  \mymat{\Delta}_A \vec{C}
 \end{equation}
 
 \subsection{Using Mass Conservation}
+\subsubsection{Computing the Entry Level}
 We replace:
 \begin{equation}
 \left\lbrace
@@ -522,6 +523,8 @@ We define
 \right.
 \end{equation}
 
+\subsubsection{Rates}
+We deduce the rate for the for involved species:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
@@ -533,7 +536,7 @@ We define
 \end{array}
 \right.
 \end{equation}
-
+We now write the adimensional variable rates:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
@@ -542,6 +545,72 @@ We define
 \end{array}
 \right.
 \end{equation}
+and finally:
+
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\partial_t \beta_x & = & 
+	\mathsf{E}\proton \dfrac{W_1}{W_1+W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right] \left( <\vec{L}_x|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_x|\vec{\epsilon}>\LiAllOut^2\right) 
+	+ k_x \left(\Theta - \beta_x\right)\\
+	\\
+	\partial_t \alpha_{xH} & = &  \epsilon_x \LiAllOut \proton \dfrac{W_1}{W_1+W_3} \left[1-(\alpha_{6H}+\alpha_{7H})\right] \left( <\vec{L}_x|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_x|\vec{\epsilon}>\LiAllOut^2\right) 
+	- k_x^h \alpha_{xH}
+	\\
+	\\
+	W_1 & = & 1 +  <\vec{L}_1| \mymat{\Delta}_K \mymat{\Delta}_D | \vec{\epsilon}> \LiAllOut \\
+	\\
+	W_3 & = & \displaystyle <\vec{L}_3|\vec{\epsilon}> \LiAllOut + <\vec{\epsilon}|\mymat{Q}_3|\vec{\epsilon}> \LiAllOut^2+ \left(\sum_{i+j=3}\epsilon_6^i \epsilon_7^j Z_{ij}\right) \LiAllOut^3 \\
+\end{array}
+\right.
+\end{equation}
+
+\subsubsection{Boundary Values}
+
+
+\section{Independency hypothesis}
+\subsection{Simplification}
+
+If we assume that the microscopic rates depends only on the "naked" lithium and not on the protein state:
+\begin{equation}
+\label{eq:indep}
+\left\lbrace
+\begin{array}{rcl}
+k^h_6    & = & k^h_7 = k_h\\
+\\
+a_{76}   & = & a_{66} = a_{06} = a^r_6\\
+d_{76}   & = & d_{66} = d_{06} = d^r_6\\
+k^p_{76} & = & k^p_{66} = i_6\\
+\\
+a_{67}   & = & a_{77} = a_{07} = a^r_7 \\
+d_{67}   & = & d_{77} = d_{07} = d^r_7\\
+k^p_{67} & = & k^p_{77} = i_7\\
+\end{array}
+\right.
+\end{equation}
+We also assume that:
+\begin{itemize}
+\item the {\bf detachment} speed up is the same, meaning that
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	i_6 & = & \rho \; i_7\\
+	d^r_6 & = & \rho \; d^r_7\\
+\end{array}
+\right.
+\end{equation}
+\item the {\bf formation} ratio are
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	a^r_6 & = & u_6 \; d^r_6\\
+	a^r_7 & = & u_7 \; d^r_7 \\
+	u_6   & = & \kappa u_7 \\
+\end{array}
+\right.
+\end{equation}
+\end{itemize}
+
 
 \end{document}
 
@@ -621,48 +690,6 @@ Finally:
 }
 \end{equation}
 
-\section{Independency hypothesis}
-\subsection{Simplification}
-
-If we assume that the microscopic rates depends only on the "naked" lithium and not on the protein state:
-\begin{equation}
-\label{eq:indep}
-\left\lbrace
-\begin{array}{rcl}
-k^h_6    & = & k^h_7 = k_h\\
-\\
-a_{76}   & = & a_{66} = a_{06} = a^r_6\\
-d_{76}   & = & d_{66} = d_{06} = d^r_6\\
-k^p_{76} & = & k^p_{66} = i_6\\
-\\
-a_{67}   & = & a_{77} = a_{07} = a^r_7 \\
-d_{67}   & = & d_{77} = d_{07} = d^r_7\\
-k^p_{67} & = & k^p_{77} = i_7\\
-\end{array}
-\right.
-\end{equation}
-We also assume that:
-\begin{itemize}
-\item the {\bf detachment} speed up is the same, meaning that
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	i_6 & = & \rho \; i_7\\
-	d^r_6 & = & \rho \; d^r_7\\
-\end{array}
-\right.
-\end{equation}
-\item the {\bf formation} ratio are
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	a^r_6 & = & u_6 \; d^r_6\\
-	a^r_7 & = & u_7 \; d^r_7 \\
-	u_6   & = & \kappa u_7 \\
-\end{array}
-\right.
-\end{equation}
-\end{itemize}
 We compute:
 \begin{equation}
 	\vec{L}_7  = i_7 u_7^2 
