--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -54,7 +54,12 @@
 \section{Passive Behaviour}
 We have two species $\spLi{6}$ and $\spLi{7}$ that may leak through the membrane:
 \begin{equation}
-	\partial_t \myleak{\Li{u}} = k_u \left( e^{\dfrac{-\Faraday V_m }{RT}} \LiOut{u} - \Li{u}\right)
+\left\lbrace
+\begin{array}{rcl}
+	\Theta    & = & e^{\dfrac{-\Faraday V_m }{RT}} \\
+	\partial_t \myleak{\Li{u}} & = & k_u \left( \Theta \LiOut{u} - \Li{u}\right)\\
+\end{array}
+\right.
 \end{equation}
 
 \section{One Layer}
@@ -136,7 +141,7 @@ so that we have the three equations:
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	\partial_t \Li{u}  & = & v^p_u +\partial_t \myleak{\Li{u}}  = \dfrac{k^p_u J_u \LiOut{u}}{1+\sum_v J_v \LiOut{v}} \left(\mathsf{E}-E_{0H}\right) \proton + k_u \left( e^{\frac{-\Faraday V_m }{RT}} \LiOut{u} - \Li{u}\right) \\
+	\partial_t \Li{u}  & = & v^p_u +\partial_t \myleak{\Li{u}}  = \dfrac{k^p_u J_u \LiOut{u}}{1+\sum_v J_v \LiOut{v}} \left(\mathsf{E}-E_{0H}\right) \proton + k_u \left( \Theta \LiOut{u} - \Li{u}\right) \\
 	\\
 	\partial_t E_{0H} & = & -k_h E_{0H} + \dfrac{\sum_v k^p_u J_u \LiOut{u}}{1+\sum_v J_v \LiOut{v}} \left(\mathsf{E}-E_{0H}\right) \proton \\
 \end{array}
@@ -162,18 +167,14 @@ Leading to the three equations:
 \left\lbrace
 \begin{array}{rcl}
 	\partial_t \beta_u & = & \mathsf{E} \left[\dfrac{k^p_u J_u}{1+J_0 \LiAllOut}\right] \left(1-\alpha\right) \proton
-	 + k_u \left( e^{\dfrac{-z_u F V_m }{RT}}- \beta_u\right)\\
+	 + k_u \left( \Theta - \beta_u\right)\\
 	\\
 	\partial_t \alpha  & = &  -k_h\alpha + \LiAllOut \left[\dfrac{ \sum_v k^p_v \epsilon_v J_v}{1+J_0\LiAllOut}\right] \left(1-\alpha\right) \proton\\
 \end{array}
 \right.
 \end{equation}
 
-In particular, with
-\begin{equation}
-	\Theta = e^{\dfrac{-\Faraday V_m }{RT}}
-\end{equation}
-
+In particular:
 \begin{equation}
 \label{eq:level1}
 	\left.\dfrac{\beta_u}{\beta_v}\right\vert_{t\to0} \simeq \left.\dfrac{\partial_t \beta_u}{\partial_t\beta_v}\right\vert_{t\to0}
@@ -225,49 +226,29 @@ with no restriction on microscopic values.
 \end{array}
 \right.
 \end{equation}
-or, by defining
-\begin{equation}
-	\alpha_{xy} = \dfrac{E_{xy}}{\mathsf{E}}
-\end{equation}
-
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\partial_t \alpha_{00} & = & D'_{06}-A'_{06} + D'_{07}-A'_{07}\\
-\partial_t \alpha_{06} & = & -D'_{06}+A'_{06} - A'_{66} + D'_{66} - A'_{67} + D'_{67} + v'_{6H}\\
-\partial_t \alpha_{07} & = & -D'_{07}+A'_{07} - A'_{77} + D'_{77} - A'_{76} + D'_{76} + v'_{7H}\\
-\partial_t \alpha_{66} & = & A'_{66}-D'_{66} -v'^p_{66}\\
-\partial_t \alpha_{67} & = & A'_{67}-D'_{67} + A'_{76}-D'_{76} - (v'^p_{67}+v'^p_{76})\\
-\partial_t \alpha_{77} & = & A'_{77}-D'_{77} - v'^p_{77}\\
-\partial_t \alpha_{6H} & = & v'^p_{66}+v'^p_{67} - v'_{6H}\\
-\partial_t \alpha_{7H} & = & v'^p_{77}+v'^p_{76} - v'_{7H}\\
-1      & = & {\displaystyle \sum_{x\leq y} \alpha_{xy}}+\alpha_{6H}+\alpha_{7H}\\
-\end{array}
-\right.
-\end{equation}
 
 with
 \begin{equation}
 \left\lbrace
-\begin{array}{rcl|rcl}
-A_{06}   & = & a_{06} E_{00} \LiOut{6}  & A'_{06}   & = & a_{06}    \alpha_{00} \LiOut{6}\\
-A_{07}   & = & a_{07} E_{00} \LiOut{7}  & A'_{07}   & = & a_{07}    \alpha_{00} \LiOut{7}\\
-D_{06}   & = & d_{06} E_{06}            & D'_{06}   & = & d_{06}    \alpha_{06}\\
-D_{07}   & = & d_{07} E_{07}            & D'_{07}   & = & d_{07}    \alpha_{07}\\
-A_{66}   & = & a_{66} E_{06} \LiOut{6}  & A'_{66}   & = & a_{66}    \alpha_{06} \LiOut{6} \\
-D_{66}   & = & d_{66} E_{66}            & D'_{66}   & = & d_{66}    \alpha_{66}\\
-A_{77}   & = & a_{77} E_{07} \LiOut{7}  & A'_{77}   & = & a_{77}    \alpha_{07} \LiOut{7}\\
-D_{77}   & = & d_{77} E_{77}            & D'_{77}   & = & d_{77}    \alpha_{77}\\
-A_{67}   & = & a_{67} E_{06} \LiOut{7}  & A'_{67}   & = & a_{67}    \alpha_{06} \LiOut{7}\\
-D_{67}   & = & d_{67} E_{67}            & D'_{67}   & = & d_{67}    \alpha_{67}\\
-A_{76}   & = & a_{76} E_{07} \LiOut{6}  & A'_{76}   & = & a_{76}    \alpha_{07} \LiOut{6}\\
-D_{76}   & = & d_{76} E_{67}            & D'_{76}   & = & d_{76}    \alpha_{67}\\
-v_{6H}   & = & k^h_6 E_{6H}             & v'_{6H}   & = & k^h_6    \alpha_{6H} \\
-v_{7H}   & = & k^h_7 E_{7H}             & v'_{7H}   & = & k^h_7    \alpha_{7H} \\
-v^p_{66} & = & k^p_{66} E_{66} \proton  & v'^p_{66} & = & k^p_{66} \alpha_{66} \proton\\
-v^p_{77} & = & k^p_{77} E_{77} \proton  & v'^p_{77} & = & k^p_{77} \alpha_{77} \proton\\
-v^p_{67} & = & k^p_{67} E_{67} \proton  & v'^p_{67} & = & k^p_{67} \alpha_{67}\\
-v^p_{76} & = & k^p_{76} E_{67} \proton  & v'^p_{76} & = & k^p_{76} \alpha_{67} \proton\\
+\begin{array}{rcl}%|rcl}
+A_{06}   & = & a_{06} E_{00} \LiOut{6}  \\% & A'_{06}   & = & a_{06}    \alpha_{00} \LiOut{6}\\
+A_{07}   & = & a_{07} E_{00} \LiOut{7}  \\%& A'_{07}   & = & a_{07}    \alpha_{00} \LiOut{7}\\
+D_{06}   & = & d_{06} E_{06}            \\%& D'_{06}   & = & d_{06}    \alpha_{06}\\
+D_{07}   & = & d_{07} E_{07}            \\%& D'_{07}   & = & d_{07}    \alpha_{07}\\
+A_{66}   & = & a_{66} E_{06} \LiOut{6}  \\%& A'_{66}   & = & a_{66}    \alpha_{06} \LiOut{6} \\
+D_{66}   & = & d_{66} E_{66}            \\%& D'_{66}   & = & d_{66}    \alpha_{66}\\
+A_{77}   & = & a_{77} E_{07} \LiOut{7}  \\%& A'_{77}   & = & a_{77}    \alpha_{07} \LiOut{7}\\
+D_{77}   & = & d_{77} E_{77}            \\%& D'_{77}   & = & d_{77}    \alpha_{77}\\
+A_{67}   & = & a_{67} E_{06} \LiOut{7}  \\%& A'_{67}   & = & a_{67}    \alpha_{06} \LiOut{7}\\
+D_{67}   & = & d_{67} E_{67}            \\%& D'_{67}   & = & d_{67}    \alpha_{67}\\
+A_{76}   & = & a_{76} E_{07} \LiOut{6}  \\%& A'_{76}   & = & a_{76}    \alpha_{07} \LiOut{6}\\
+D_{76}   & = & d_{76} E_{67}            \\%& D'_{76}   & = & d_{76}    \alpha_{67}\\
+v_{6H}   & = & k^h_6 E_{6H}             \\%& v'_{6H}   & = & k^h_6    \alpha_{6H} \\
+v_{7H}   & = & k^h_7 E_{7H}             \\%& v'_{7H}   & = & k^h_7    \alpha_{7H} \\
+v^p_{66} & = & k^p_{66} E_{66} \proton  \\%& v'^p_{66} & = & k^p_{66} \alpha_{66} \proton\\
+v^p_{77} & = & k^p_{77} E_{77} \proton  \\%& v'^p_{77} & = & k^p_{77} \alpha_{77} \proton\\
+v^p_{67} & = & k^p_{67} E_{67} \proton  \\%& v'^p_{67} & = & k^p_{67} \alpha_{67}\\
+v^p_{76} & = & k^p_{76} E_{67} \proton  \\%& v'^p_{76} & = & k^p_{76} \alpha_{67} \proton\\
 \end{array}
 \right.
 \end{equation}
@@ -283,10 +264,9 @@ And
 \right.
 \end{equation}
 
-\subsection{Steady State}
+\subsection{Algebraic Notations}
 
 
-\subsubsection{Second layer as a function of the first layer}
 
 We define:
 \begin{itemize}
@@ -295,11 +275,6 @@ We define:
 	\vec{E}_1 = \begin{bmatrix}
 	E_{06}\\
 	E_{07}\\
-	\end{bmatrix}, \;\; 
-	\vec{\alpha}_{1} = 
-	\begin{bmatrix}
-	\alpha_{06}\\
-	\alpha_{07}\\
 	\end{bmatrix}
 \end{equation}
 \item and the second layer variables:
@@ -308,12 +283,7 @@ We define:
 	E_{66}\\
 	E_{67}\\
 	E_{77}\\
-	\end{bmatrix},\;\;
-	\vec{\alpha}_2 = \begin{bmatrix}
-	\alpha_{66}\\
-	\alpha_{67}\\
-	\alpha_{77}\\
-	\end{bmatrix},\;\;
+	\end{bmatrix}
 \end{equation}
 \item the outer concentrations:
 \begin{equation}
@@ -343,14 +313,9 @@ We define:
 	\begin{bmatrix}
 	E_{6H}\\
 	E_{7H}\\
-	\end{bmatrix},\;\;
-\vec{\alpha}_H = 
-	\begin{bmatrix}
-	\alpha_{6H}\\
-	\alpha_{7H}\\
-	\end{bmatrix} 
+	\end{bmatrix}
 \end{equation}
-\item the projecting items
+\item the algebraic projection terms:
 \begin{equation}
 	\vec{L}_1 = 
 	\begin{bmatrix}
@@ -365,6 +330,8 @@ We define:
 \end{equation}
 
 \end{itemize}
+
+\subsection{Second layer as a function of the first layer}
 
 Using the three equations describing the second layer and assuming that the internal pre-equilibrium is fast, we express:
 
